--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -127,6 +127,28 @@
   // transform: skewY(-3deg);
 }
 
+.spinner {
+  margin: 5rem auto;
+  text-align: center;
+
+  svg {
+    height: 6rem;
+    width: 6rem;
+    fill: $color-primary;
+    animation: rotate 2s infinite linear;
+  }
+}
+
+@keyframes rotare {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .message,
 .error {
   max-width: 40rem;
