--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -8,3 +8,24 @@
   list-style: none;
   margin-bottom: 2rem;
 }
+
+.pagination {
+  margin-top: auto;
+  padding: 0 3.5rem;
+
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  &__btn {
+    &--prev {
+      float: left;
+    }
+
+    &--next {
+      float: right;
+    }
+  }
+}
