--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -58,6 +58,10 @@
         $color-grad-2
       );
     }
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 70%;
+    }
   }
 
   /////////////////////
