--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,6 +11,9 @@ $color-grey-dark-2: #918581; // Lighter text
 
 $gradient: linear-gradient(to right bottom, $color-grad-1, $color-grad-2);
 
+$bp-large: 78.15rem; // 1250 px
+$bp-medium: 61.25rem; // 980 px
+
 * {
   margin: 0;
   padding: 0;
@@ -25,6 +28,10 @@ $gradient: linear-gradient(to right bottom, $color-grad-1, $color-grad-2);
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -53,4 +60,10 @@ body {
   grid-template-areas:
     "head head"
     "list recipe";
+
+  @media only screen and (max-width: $bp-large) {
+    max-width: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
 }
