--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -40,6 +40,14 @@
     &::placeholder {
       color: $color-grey-light-3;
     }
+
+    @media only screen and (max-width: $bp-medium) {
+      width: auto;
+
+      &::placeholder {
+        color: white;
+      }
+    }
   }
 
   &__btn {
